--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,9 @@
   </head>
 
   <body>
-    <%= render 'layouts/navbar' %>
-    
-    <div class="container">
+          <%= render 'layouts/navbar' %>
+    <div class="container-fluid">
+
       <%= render 'layouts/flash_messages' %>
 
       <%= yield %>
