developing show.html.erb

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
-<header class="mb-4">
-  <nav class="navbar navbar-expand navbar-dark">
+<header class="mb-4 border-bottom">
+  <nav class="navbar navbar-expand navbar-light bg-white">
     <% if user_signed_in? %>
       <ul class="navbar-nav w-100 nav-justified">
           <li class="nav-item active">
