--- a/app/views/toppages/show.html.erb
+++ b/app/views/toppages/show.html.erb
@@ -2,7 +2,6 @@
     <div class="col-sm-6 offset-sm-3">
         <div class="text-center"><h1>こんにちは、<%= current_user.username %>さん</h1></div>
         
-
         <div class="media p-3 my-4 border rounded">
             <div class=" mr-2">
                 <%= link_to image_tag("#{current_user.image_url}", :size => "80x80", :class => "rounded-circle") %>
@@ -12,15 +11,17 @@
                 <p><%= current_user.description %></p>
             </div>
         </div>
-        
+
         <div class="form">
             <div class="text-center pb-2">
                 新しく質問を投稿します。何でも聞いてみましょう。
             </div>
-            <div class="form-group "> 
-                <textarea rows="5" class="form-control form-control-lg" placeholder="質問を入力します。"></textarea>
-            </div>
-            <button class="btn btn-secondary btn-block p-3">質問する</button>
+            <%= form_with(model: @post, local: true) do |f| %>
+                <div class="form-group">
+                    <%= f.text_area :content, class: 'form-control', rows: 5 %>
+                </div>
+                <%= f.submit '質問する', class: 'btn btn-secondary btn-block p-3' %>
+            <% end %>
         </div>
         
         <div class="my-post m-2">
@@ -33,6 +34,7 @@
                 <p>Twitterでフォローしているユーザーの質問です。<br>
                 回答はすべて匿名で送られるので、気楽に答えてみましょう。</p>
             </div>
+            <%= render 'posts/posts', posts: @posts %>
         </div>
     </div>
 </div>
