--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
               <% end %>
           </li>
           <li class="nav-item">
-              <%= link_to toppages_post_path do %>
+              <%= link_to toppages_follows_path do %>
                   <i class="fas fa-users fa-3x"></i>
               <% end %>
           </li>
