--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,18 +9,21 @@
               <% end %>
           </li>
           <li class="nav-item">
-              <%= link_to edit_user_registration_path do %>
-                  <i class="fas fa-user-edit fa-3x"></i>
+              <%= link_to toppages_follows_path do %>
+                  <i class="fas fa-users fa-3x"></i>
+                  <br>友だち</br>
               <% end %>
           </li>
           <li class="nav-item">
-              <%= link_to toppages_follows_path do %>
-                  <i class="fas fa-users fa-3x"></i>
+              <%= link_to edit_user_registration_path do %>
+                  <i class="fas fa-user-edit fa-3x"></i>
+                  <br>質問投稿</br>
               <% end %>
           </li>
           <li class="nav-item">
               <%= link_to destroy_user_session_path, method: :delete do%>
                   <i class="fas fa-sign-out-alt fa-3x"></i>
+                  <br>ログアウト</br>
               <% end %>
           </li>
       </ul>
