--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,6 +1,6 @@
 <ul class="list-unstyled">
   <% posts.each do |post| %>
-    <%= link_to user_post_path(user, post) do %>
+    <%= link_to user_post_path(post.user, post) do %>
       <li class="media mb-3">
         <div class=" mr-2">
           <%= image_tag("#{post.user.image_url}", :size => "60x60", :class => "rounded-circle") %>
@@ -8,6 +8,8 @@
         <div class="media-body">
           <h5><%= post.user.username %></h5>
           <p><%= post.content %></p>
+          <%= link_to '削除', [post.user, post], method: :delete, data: { confirm: "この質問を削除しますか？" },
+              class: 'btn btn-danger' %>
         </div>
       </li>
     <% end %>
