--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,7 +24,7 @@
               <div class="text-center pb-2">
                 <%= @user.username %>さんの質問に回答します。回答は匿名で送られます。
               </div>
-              <%= form_with(model: @reply, local: true) do |f| %>
+              <%= form_with(model: @reply, local: true, url: confirm_new_reply_path) do |f| %>
                   <div class="form-group">
                       <%= f.text_area :content, class: 'form-control', rows: 5 %>
                       <%= f.hidden_field :post_id, value: @post.id %>
