--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,10 @@
+<% set_meta_tags title: "#{@user.username}(#{@user.nickname})",
+    description: "#{@user.username}さんの質問です。",
+  og: {
+    title: "#{@user.username}(#{@user.nickname})",
+    description: "#{@user.username}さんの質問です。",
+ } %>
+
 <div class="row">
     <div class="col-sm-6 offset-sm-3">
         <div class="media p-3 my-4 border rounded">
