--- a/app/views/toppages/show.html.erb
+++ b/app/views/toppages/show.html.erb
@@ -33,7 +33,7 @@
                 <p>Twitterでフォローしているユーザーの質問です。<br>
                 回答はすべて匿名で送られるので、気楽に答えてみましょう。</p>
             </div>
-            <%= render 'posts/posts', user: current_user, posts: @posts %>
+            <%= render 'posts/posts', user: current_user, posts: @open_posts %>
         </div>
     </div>
 </div>
