--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    <div class="container-fluid">
-      <%= render 'layouts/flash_messages' %>
+    <%= render 'layouts/flash_messages' %>
+    <main>
       <%= yield %>
-    </div>
+    </main>
   </body>
 </html>
