--- a/app/views/toppages/follows.html.erb
+++ b/app/views/toppages/follows.html.erb
@@ -1,12 +1,33 @@
+          <div class="text-center">
+            <h1>友だち</h1>
+            <p>Twitterでフォローしているユーザーの一覧です</p>
+          </div>
 <% @friends.each do |friend| %>
-    #ユーザー名
-    <a href="https://twitter.com/<%= friend.nickname %>" target="_blank"><%= friend.username %></a>
-    #アカウント名
-    <p><%= friend.username %></p>
-    #プロフィール文
-    <!-- <p><%= friend.description %></p> -->
-    #プロフィール画像
-    <p><%= image_tag "#{friend.image_url}" %></p>
-    <%= link_to(friend.nickname, user_path(friend.nickname)) %>
-    <hr>
+  <div class="profile p-4">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-6 offset-sm-3">
+          <div class="media p-3 border rounded">
+            <div class="mr-3">
+              <%= link_to image_tag("#{friend.image_url}", :size => "80x80", :class => "rounded-circle") %>
+            </div>
+            <div class="media-body">
+              <div class="row">
+                <div class="col-md-3">
+                  <h5><%= friend.username %></h5>
+                </div>
+                <div class="col-md-3 offset-md-6 text-right">
+                  <%= link_to friend.url do %>
+                  <i class="fab fa-twitter fa-fw">
+                  </i>
+                  <% end %>
+                </div>
+              </div>
+              <p><%= friend.description %></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
