--- a/app/views/toppages/show.html.erb
+++ b/app/views/toppages/show.html.erb
@@ -1,64 +1,46 @@
-<div class="profile p-4">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-6 offset-sm-3">
-        <div class="media p-3 mb-3 border rounded">
-          <div class="mr-3">
-            <%= link_to image_tag("#{current_user.image_url}", :size => "80x80", :class => "rounded-circle") %>
-          </div>
-          <div class="media-body">
-            <div class="row">
-              <div class="col-md-3">
-                <h5><%= current_user.username %></h5>
-              </div>
-              <div class="col-md-3 offset-md-6 text-right">
-                <%= link_to current_user.url do %>
-                <i class="fab fa-twitter fa-fw">
-                </i>
-                <% end %>
-              </div>
-            </div>
-            <p><%= current_user.description %></p>
-          </div>
+<div class="profile py-4">
+  <div class="media p-3 mb-3 border rounded">
+    <div class="mr-3">
+      <%= link_to image_tag("#{current_user.image_url}", :size => "80x80", :class => "rounded-circle") %>
+    </div>
+    <div class="media-body">
+      <div class="row">
+        <div class="col-md-3">
+          <h5><%= current_user.username %></h5>
         </div>
-        <div class="btn btn-outline-secondary btn-block center-block">
-          <%= link_to "自分の質問を見る", user_path(current_user) %>
+        <div class="col-md-3 offset-md-6 text-right">
+          <%= link_to current_user.url do %>
+          <i class="fab fa-twitter fa-fw">
+          </i>
+          <% end %>
         </div>
       </div>
+      <p><%= current_user.description %></p>
     </div>
+  </div>
+  <div class="btn btn-outline-secondary btn-block center-block">
+    <%= link_to "自分の質問を見る", user_path(current_user) %>
   </div>
 </div>
 
-<div class="form p-4">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-6 offset-sm-3">
-        <div class="text-center">
-          <h1>質問する</h1>
-          <p>新しく質問を投稿します。何でも聞いてみましょう。</p>
-        </div>
-          <div class="form-group">
-            <%= form_with(model: [current_user, @post], local: true, url: confirm_new_user_post_path(current_user)) do |f| %>
-              <%= f.text_area :content, class: 'form-control', rows: 8 %>
-              <%= f.submit '質問する', class: 'btn btn-outline-secondary btn-block p-3 my-3' %>
-            <% end %>
-          </div>
-      </div>
-    </div>
+<div class="form py-4">
+  <div class="text-center">
+    <h1>質問する</h1>
+    <p>新しく質問を投稿します。何でも聞いてみましょう。</p>
+  </div>
+  <div class="form-group">
+    <%= form_with(model: [current_user, @post], local: true, url: confirm_new_user_post_path(current_user)) do |f| %>
+      <%= f.text_area :content, class: 'form-control', rows: 8 %>
+      <%= f.submit '質問する', class: 'btn btn-outline-secondary btn-block p-3 my-3' %>
+    <% end %>
   </div>
 </div>
 
-<div class="other-posts">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-6 offset-sm-3">
-        <div class="text-center">
-          <h1>みんなの質問</h1>
-          <p>Twitterでフォローしているユーザーの質問です。<br>
-            回答はすべて匿名で送られるので、気楽に答えてみましょう。</p>
-        </div>
-        <%= render 'posts/posts', user: current_user, posts: @open_posts %>
-      </div>
-    </div>
+<div class="other-posts py-4">
+  <div class="text-center">
+    <h1>みんなの質問</h1>
+    <p>Twitterでフォローしているユーザーの質問です。<br>
+      回答はすべて匿名で送られるので、気楽に答えてみましょう。</p>
   </div>
+  <%= render 'posts/posts', user: current_user, posts: @open_posts %>
 </div>
