--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,6 +1,6 @@
-<div class="card">
+<div class="card bg-light">
   <div class="card-body">
-    <ul class="list-unstyled">
+    <ul class="list-unstyled" >
       <% posts.each do |post| %>
         <%= link_to user_post_path(post.user, post) do %>
           <li class="media p-3 mb-3 border rounded">
