--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,5 +1,5 @@
 <div class="profile">
-  <div class="media p-3 mb-3 border rounded">
+  <div class="media p-3 border rounded">
     <div class="mr-3">
       <%= link_to image_tag("#{user.image_url}", :size => "80x80", :class => "rounded-circle") %>
     </div>
