--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
       <i class="fas fa-user fa-3x"></i>
       <br>自分</br>
     <% end %>
-    <%= link_to destroy_user_session_path, method: :delete, class: "nav-item nav-link" do%>
+    <%= link_to toppages_edit_path, class: "nav-item nav-link" do%>
       <i class="fas fa-cog fa-3x"></i>
       <br>設定</br>
     <% end %>
