--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,42 +18,30 @@
     <p><%= @post.content %></p>
   </div>
 </div>
-<% if @user == current_user %>
-  <div class="">
-    <%= link_to '削除', [@user, @post], method: :delete, data: { confirm: "この質問を削除しますか？" },
-    class: 'btn btn-danger' %>
-    <%= form_with(model: [@user, @post], local: true) do |f| %>
-     <% if @post.status == true %>
-        <%= f.submit '締め切る', class: 'btn btn-primary btn-block p-3' %>
-      <% else %>
-        <%= f.submit '回答を受け付ける', class: 'btn btn-primary btn-block p-3' %>
-      <% end %>
+
+<div class="reply">
+  <div class="text-center">
+    <h1>回答する</h1>
+    <p><%= @user.username %>さんの質問に回答します。回答は匿名で送られます。</p>
+  </div>
+  <div class="form-group card bg-light">
+    <% if @post.status %>
+      <%= render 'replies/form', reply: @reply, post: @post %>
+    <% else %>
+      <p class="text-center">この質問への回答は締め切られました。</p>
     <% end %>
   </div>
-  <div class="other-posts my-3">
+</div>
+
+<% if @user == current_user %>
+  <div class="change">
+    <%= render 'posts/edit_form', user: @user, post: @post %>
+  </div>
+  <div class="other-replies my-5">
     <div class="text-center">
       <h1>回答一覧</h1>
       <p>この質問に送られてきた回答の一覧です。回答は他の人には見えません。</p>
     </div>
     <%= render 'replies/replies', replies: @replies %>
-  </div>
-  <div class="other-posts my-3">
-  </div>
-<% elsif @post.status == true %>
-  <div class="form">
-    <div class="text-center pb-2">
-      <%= @user.username %>さんの質問に回答します。回答は匿名で送られます。
-    </div>
-    <%= form_with(model: @reply, local: true, url: confirm_new_reply_path) do |f| %>
-    <div class="form-group">
-      <%= f.text_area :content, class: 'form-control', rows: 5 %>
-      <%= f.hidden_field :post_id, value: @post.id %>
-    </div>
-    <%= f.submit '回答する', class: 'btn btn-secondary btn-block p-3' %>
-    <% end %>
-  </div>
-<% else %>
-  <div class="text-center">
-    <p>この質問への回答は締め切られました。</p>
   </div>
 <% end %>
