--- a/app/views/toppages/follows.html.erb
+++ b/app/views/toppages/follows.html.erb
@@ -3,7 +3,7 @@
     <h1>友だち</h1>
     <p>Twitterでフォローしているユーザーの一覧です</p>
   </div>
-  <div class="card bg-light">
+  <div class="card">
     <div class="card-body">
       <ul class="list-unstyled">
         <% @friends.each do |friend| %>
