--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     description: "#{@user.username}さんの質問です。",
  } %>
 
-<div class="user-profile card bg-light my-5">
+<div class="user-profile card my-5">
   <div class="card-body">
     <%= render 'users/profile', user: @user %>
   </div>
