friends, users/postsのpartial

--- a/app/views/toppages/follows.html.erb
+++ b/app/views/toppages/follows.html.erb
@@ -6,31 +6,7 @@
   <div class="card">
     <div class="card-body">
       <ul class="list-unstyled">
-        <% @friends.each do |friend| %>
-            <li class="media p-3 mb-3 border rounded">
-              <div class="mr-3">
-                <%= link_to user_path(friend) do %>
-                  <%= image_tag("#{friend.image_url}", :size => "80x80", :class => "rounded-circle") %>
-                <% end %>
-              </div>
-              <div class="media-body">
-                <div class="row">
-                  <div class="col-md-3">
-                    <h5><%= friend.username %></h5>
-                  </div>
-                  <div class="col-md-3 offset-md-6 text-right">
-                    <%= link_to friend.url do %>
-                      <i class="fab fa-twitter fa-fw"></i>
-                    <% end %>
-                  </div>
-                </div>
-                <p><%= friend.description %></p>
-                <%= link_to user_path(friend) do %>
-                  <p class="text-right m-0">質問を見る</p>
-                <% end %>
-              </div>
-            </li>
-        <% end %>
+        <%= render partial: 'users/friends', collection: @friends %>
       </ul>
     </div>
   </div>
