--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,9 +10,7 @@
   <%= image_tag(url_for(:action => 'get_image', :id => @post.id)) %>
 </div>
 <div class="media p-3 my-4 border rounded">
-  <div class=" mr-2">
-    <%= link_to image_tag("#{@user.image_url}", :size => "80x80", :class => "rounded-circle") %>
-  </div>
+  <%= link_to image_tag("#{@user.image_url}", size: "80x80", class: "rounded-circle mr-2") %>
   <div class="media-body">
     <h5><%= @user.username %></h5>
     <p><%= @post.content %></p>
