トップ画面など

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    <div class="main bg-light">
+    <div class="main bg-light pb-5">
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-6 offset-sm-3">
