--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark justify-content-center">
+<nav class="navbar navbar-dark justify-content-center text-center">
   <% if user_signed_in? %>
     <%= link_to toppages_show_path, class: "nav-item nav-link" do %>
       <i class="fas fa-home fa-3x"></i>
@@ -16,8 +16,5 @@
       <i class="fas fa-cog fa-3x"></i>
       <br>設定</br>
     <% end %>
-  <% else %>
-      <%= link_to 'サインアップ', new_user_registration_path %>
-      <%= link_to 'ログイン', new_user_session_path %>
   <% end %>
 </nav>
