[fix] ogp for s3

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,7 @@
  } %>
 
 <!-- image_tag(url_for(controller: 'posts', action: 'get_image', id: @post.id), width: "690", class: "img-fluid")  -->
-<%= image_tag(@post.resize, width: "690") if @post.image.attached? %>
+<%= image_tag(@post.image, width: "690") if @post.image.attached? %>
 <div class="media p-3 my-4 border rounded">
   <%= link_to image_tag("#{@user.image_url}", size: "80x80", class: "rounded-circle mr-2") %>
   <div class="media-body">
