--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -3,13 +3,13 @@
 </div>
 <div class="signup my-5">
   <div class="text-center">
-    <h3>○○は、匿名で回答を募集できるサービスです。</h3>
+    <h3>Answersは、匿名で回答を募集できるサービスです。</h3>
     <%= link_to "Twitterで登録/ログイン", user_twitter_omniauth_authorize_path, class: "btn btn-primary btn-block py-3 mt-5" %>
   </div>
 </div>
 <div class="description my-5">
   <div class="text-center">
-    <h3 class="my-3">○○の使い方</h3>
+    <h3 class="my-3">Answersの使い方</h3>
     <h5>1.登録/ログインする</h5>
     <p>Twitterアカウントを使って登録/ログインしましょう。</p>
     <h5>2.質問する</h5>
