background-image, 文字数カウントなど

--- a/app/views/toppages/show.html.erb
+++ b/app/views/toppages/show.html.erb
@@ -12,7 +12,8 @@
   <div class="form-group card">
     <div class="card-body">
       <%= form_with(model: [current_user, @post], local: true, url: confirm_new_user_post_path(current_user)) do |f| %>
-        <%= f.text_area :content, class: 'form-control', rows: 8 %>
+        <%= f.text_area :content, class: 'form-control js-text', rows: 8 %>
+        <p class="js-text-count pull-right"></p>
         <%= f.submit '質問する', class: 'btn btn-outline-secondary btn-block p-3 mt-3' %>
       <% end %>
     </div>
