--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,14 @@
  *= require_self
  */
 
+.main {
+  background-image: url("back.jpg");
+}
+
 a {
   color: gray;
+}
+
+.pagination {
+  justify-content: center;
 }
