--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -7,7 +7,7 @@
             <%= image_tag("#{post.user.image_url}", size: "60x60", class: "rounded-circle mr-3") %>
             <div class="media-body">
               <h5><%= post.user.username %></h5>
-              <p><%= post.content %></p>
+              <p><%= simple_format(post.content) %></p>
               <p class="text-right m-0">回答する</p>
             </div>
           </li>
