--- a/app/views/posts/confirm_new.html.erb
+++ b/app/views/posts/confirm_new.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="form-group">
   <%= form_with(model: [current_user, @post], local: true) do |f| %>
-    <p><%= @post.content %></p>
+    <p><%= simple_format(h(@post.content)) %></p>
     <%= f.hidden_field :content, value: @post.content %>
     <%= f.submit '送信する', class: 'btn btn-outline-secondary btn-block' %>
     <%= f.submit 'キャンセル', name: 'back', class: 'btn btn-primary btn-block p-3 my-3' %>
