--- a/app/views/posts/confirm_new.html.erb
+++ b/app/views/posts/confirm_new.html.erb
@@ -1,11 +1,15 @@
 <div class="text-center py-2">
   <h5>この内容で送信します。<br>よろしいですか？</h5>
 </div>
-<div class="form-group">
-  <%= form_with(model: [current_user, @post], local: true) do |f| %>
-    <p><%= simple_format(h(@post.content)) %></p>
-    <%= f.hidden_field :content, value: @post.content %>
-    <%= f.submit '送信する', class: 'btn btn-outline-secondary btn-block' %>
-    <%= f.submit 'キャンセル', name: 'back', class: 'btn btn-primary btn-block p-3 my-3' %>
-  <% end %>
+<div class="form-group card">
+  <div class="card-body">
+    <%= form_with(model: [current_user, @post], local: true) do |f| %>
+      <div class="border rounded p-3 mb-3">
+        <%= simple_format(h(@post.content)) %>
+      </div>
+      <%= f.hidden_field :content, value: @post.content %>
+      <%= f.submit '送信する', class: 'btn btn-outline-secondary btn-block' %>
+      <%= f.submit 'キャンセル', name: 'back', class: 'btn btn-primary btn-block mu-3' %>
+    <% end %>
+  </div>
 </div>
