--- a/app/views/replies/confirm_new.html.erb
+++ b/app/views/replies/confirm_new.html.erb
@@ -1,12 +1,16 @@
 <div class="text-center py-2">
   <h5>この内容で送信します。<br>よろしいですか？</h5>
 </div>
-<div class="form-group">
-  <%= form_with(model: @reply, local: true) do |f| %>
-      <p><%= @reply.content %></p>
+<div class="form-group card">
+  <div class="card-body">
+    <%= form_with(model: @reply, local: true) do |f| %>
+      <div class="border rounded p-3 mb-3">
+        <%= simple_format(h(@reply.content)) %>
+      </div>
       <%= f.hidden_field :content, value: @reply.content %>
       <%= f.hidden_field :post_id, value: @post.id %>
       <%= f.submit '送信する', class: 'btn btn-outline-secondary btn-block' %>
-      <%= f.submit 'キャンセル', name: 'back', class: 'btn btn-primary btn-block p-3 my-3' %>
-  <% end %>
+      <%= f.submit 'キャンセル', name: 'back', class: 'btn btn-primary btn-block mu-3' %>
+    <% end %>
+  </div>
 </div>
